# dictionary

./: CMakeLists.txt  addword.cpp  addword.h  addword.ui  dictionary.cpp  dictionary.h  dictionary.ui  includes.h  main.cpp  wordlist.cpp  wordlist.h  wordlist.ui
